[package]
name = "novacibes-editor"
version = "0.1.0"
edition = "2021"
description = "A native macOS code editor that runs Python via a remote API."

[dependencies]
eframe = "0.34.2"
egui = "0.34.2"
egui_code_editor = "0.2.12"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] } # Using full for convenience, could be optimized later
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rfd = "0.17.2"
directories = "6.0.0"
once_cell = "1.21.3"
keyring = "2.0" # Add this line for secure token storage

[profile.release]
opt-level = 2
strip = true
lto = true
codegen-units = 1